compiler/src/test/resources/amyc/parser/passing/ClassDefs.amy
module CaseClassDefs
  abstract class Foo
  case class Bar() : Foo
  case class Bar(x: Int) : Foo
  abstract class Foo
  case class Bar(x: Int, y: A) : Foo
end CaseClassDefs
