compiler/src/test/resources/amyc/parser/failing/ClassDefError1.grading.amy
object ClassDef
  case class Foo()
end ClassDef
